# midnight-trusted-setup

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  MIDNIGHT_SRS_CATALOG.md  PARTICIPANTS.md  README.md  SECURITY.md  WIKI.md  filecoin_srs_g1_point  rustfmt.toml  wiki.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-improvement.md  feature-request.md  request-participation.md
.github/workflows/: checkmarx.yaml  ci.yml
proofs/: proof1  proof10  proof11  proof12  proof13  proof14  proof15  proof16  proof17  proof18  proof19  proof2  proof20  proof21  proof22  proof23  proof24  proof25  proof26  proof27  proof28  proof29  proof3  proof30  proof31  proof32  proof33  proof34  proof35  proof36  proof37  proof38  proof4  proof5  proof6  proof7  proof8  proof9
src/: ceremony.rs  filecoin.rs  lib.rs  main.rs  schnorr.rs  utils.rs
tee_contribution/: README.md  attestation.txt  ceremony.Dockerfile  deploy_service.sh  policy.json
