[package]
name = "srs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srs_utils"
path = "src/main.rs"

[dependencies]
blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "e6e4518" }
rand_core = "0.6"
halo2curves = { version = "0.7.0", features = ["derive_serde"] }
blake2 = "0.10.6"
clap = { version = "4.5.26", features = ["derive"] }
rayon = "1.10.0"
rand_chacha = "0.3.0"
indicatif = "0.17.11"
