[package]
name = "srs"
version = "0.1.0"
edition = "2021"

[dependencies]
blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "e6e4518" }
ff = "0.13"
rand_core = "0.9"
halo2curves = { version = "0.7.0", features = ["derive_serde"] }
blake2 = "0.10.6"
clap = { version = "4.5.26", features = ["derive"] }
rayon = "1.10.0"
rand_chacha = "0.3.0"
indicatif = "0.17.11"

# drand verifier
drand-verify = "0.5"
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10.9"
